--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "assert": "^2.0.0",
+    "debug": "^4.3.1",
     "irc-colors": "^1.5.0",
     "knuth-shuffle": "^1.0.8",
     "rxjs": "^6.6.7",
